# weviwavo

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  gradle.properties  justfile  settings.gradle.kts  test_cookie.nu
android/: AndroidManifest.xml  build.gradle.kts
crates/cookie-scrapy/: Cargo.toml
crates/cookie-scrapy/src/: lib.rs  public.rs  types.rs
crates/cookie-scrapy/src/providers/: chrome.rs  edge.rs  firefox.rs  safari.rs
crates/cookie-scrapy/src/providers/chromium/: shared.rs
crates/servo-webview/: Cargo.toml
crates/servo-webview/src/: lib.rs  po_token.html  potoken.rs
crates/ytdroid/: Cargo.toml
crates/ytdroid/src/: auth.rs  client.rs  error.rs  filters.rs  http.rs  lib.rs  models.rs  youtube.rs
crates/ytdroid/src/pages/: album.rs  artist.rs  explore.rs  home.rs  library.rs  mod.rs  next.rs  playlist.rs  related.rs  search.rs
crates/ytdroid/src/response/: common.rs  mod.rs
examples/: audio_test.rs
src/: app.rs  audio.rs  auth.rs  cookies.rs  lib.rs  prefs.rs  startup.rs  utils.rs
src/api/: mod.rs
src/app/: album.rs  artist.rs  data.rs  home.rs  playlist.rs
src/audio/: engine.rs  nsig.rs  youtube.rs
src/components/: loading_bar.rs  mod.rs  player_bar.rs  playlist_song_row.rs  scroll_button.rs  section.rs  song.rs  song_context_menu.rs  textinfo.rs  top_bar.rs
src/components/base_components/: item_button.rs  mod.rs
src/dialog/: mod.rs
wix/: main.wxs
