[package]
name = "weviwavo"
version = "0.1.0"
edition = "2024"
description = "WeviWavo"
authors = ["Sergio Ribera <contact@sergioribera.rs>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioRibera/weviwavo"
homepage = "https://github.com/SergioRibera/weviwavo"

[package.metadata.wix]
upgrade-guid = "F1AE1A70-78BE-4DBA-84EF-C654B0876676"
path-guid = "DA5096CD-3F50-48BE-B3A5-7296B76A0A17"
license = false
eula = false

[lib]
crate-type = ["cdylib"]

[dependencies]
freya = { version = "0.4.0-rc.6", features = [
    "remote-asset",
    "router",
    "radio",
    "webview",
    "icons",
] }
freya-router = "0.4.0-rc.6"
tokio = { version = "1.49", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
# freya = { path = "../../contributions/freya/crates/freya/", features = ["remote-asset", "hotreload"] }
# freya-radio = { path = "../../contributions/freya/crates/freya-radio/", features = ["tracing"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ytmapi-rs = { path = "../../contributions/youtui/ytmapi-rs/", default-features = false, features = [
    "rustls-tls",
    "simplified-queries",
] }
# ytmapi-rs = { version = "0.2.4", git = "https://github.com/SergioRibera/youtui", branch = "homefeed", default-features = false, features = [
#     "rustls-tls",
#     "simplified-queries",
# ] }

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.12", features = [
    "android-native-activity",
    "rwh_06",
] }

[features]
default = []
desktop = []

[[bin]]
path = "src/lib.rs"
name = "weviwavo"
required-features = ["desktop"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
