[package]
name = "weviwavo"
version = "0.1.0"
edition = "2024"
description = "WeviWavo"
authors = ["Sergio Ribera <contact@sergioribera.rs>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioRibera/weviwavo"
homepage = "https://github.com/SergioRibera/weviwavo"

[package.metadata.wix]
upgrade-guid = "F1AE1A70-78BE-4DBA-84EF-C654B0876676"
path-guid = "DA5096CD-3F50-48BE-B3A5-7296B76A0A17"
license = false
eula = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["crates/*"]

[dependencies]
servo-webview = { path = "./crates/servo-webview" }
freya = { version = "0.4.0", features = [
    "remote-asset",
    "router",
    "radio",
    "icons",
    "hotreload",
] }
tokio = { version = "1.49", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
bytes = "1"
ytdroid = { path = "./crates/ytdroid" }
thiserror = "2"
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde_json = "1"
sha1_smol = "1"
chacha20poly1305 = "0.10"
rand = "0.8"

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.12", features = [
    "android-native-activity",
    "rwh_06",
] }

[features]
default = []
desktop = []

[[bin]]
path = "src/lib.rs"
name = "weviwavo"
required-features = ["desktop"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
