[package]
name = "ytdroid"
version = "0.1.0"
edition = "2024"
description = "YouTube Music Innertube client — faithful port of Metrolist's innertube module"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha1_smol = "1"
tracing = "0.1"
tokio = { version = "1", default-features = false, features = ["time"] }
base64 = "0.22"
